<resources>
    <string name="app_name">SneakerLab</string>
    <string name="facebook_app_id">637256776443104</string>
    <string name="CloseDrawer">Close drawer</string>
    <string name="OpenDrawer">Open Drawer</string>
    <string name="Filter">Filter</string>
    <string name="Search">Search</string>
    <string name="Browse">Browse</string>
    <string name="Notifications">Notifications</string>
    <string name="ShoppingCart">Shopping Cart</string>
    <string name="OrderHistory">Order History</string>
    <string name="Currency">Currency</string>
    <string name="AboutUs">About us</string>
    <string name="ContactUs">Contact us</string>
    <string name="CustomerSupport">Customer Support</string>
    <string name="Settings">Settings</string>
    <string name="UserInfo">UserInfo</string>
    <string name="TellUsAboutYourself">Tell us about yourself</string>
    <string name="WeWillFindProductsYouLike">We\'ll find products you\'ll like</string>
    <string name="Birthday">Birthday</string>
    <string name="Change">Change</string>
    <string name="Gender">Gender</string>
    <string name="Complete">Complete</string>
    <string name="ProductDetail">ProductDetail</string>
    <string name="OverView">OverView</string>
    <string name="Related">Related</string>
    <string name="Description">Description</string>
    <string name="Rating">Rating</string>
    <string name="ShippingInfo">ShippingInfo</string>
    <string name="ProductName">Adidas Yeezy 350 Boost Moonrock Women</string>
    <string name="ProductPrice">￥1500.90</string>
    <string name="ProductOriginalPrice">￥3001.80</string>
    <string name="ProductSellVolume">1000购买了</string>
    <string name="Username">Khorium</string>
    <string name="Cancel">Cancel</string>
    <string name="PopularSearches">Popular Searches</string>
    <string name="PleaseSelectYourPreferCurrencyBelow">Please select your prefer currency below:</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="ChangeSuccess">Change Language Success</string>
    <string name="CONTINUE_SHOPPING">CONTINUE SHOPPING</string>
    <string name="BillTo">Bill To:</string>
    <string name="CreditCard">Credit Card</string>
    <string name="CardNumber">Card number</string>
    <string name="SecurityCode">Security Code</string>
    <string name="CVV">CVV</string>
    <string name="SecurityDetail">The 3 or 4 digit security code on the front or back of your credit card</string>
    <string name="ExpiryDate">Expiry Date</string>
    <string name="MMYY">MM/YY</string>
    <string name="BillingPostalCode">Billing Zip/Postal Code</string>
    <string name="ZipPostalCode">Zip/Postal Code</string>
    <string name="BillingPostalCodeDetail">The zip or postal code from the address registered for this credit card</string>
    <string name="SavePaymentInfo">Save Payment Info</string>
    <string name="SecurePayment">Secure Payment</string>
    <string name="SecurePaymentInfo">Trusted by over 100 million shoppers in 50 countries</string>
    <string name="buy">Buy</string>
    <string name="Color">Color</string>
    <string name="Size">Size</string>
    <string name="Quantity">Quantity</string>
    <string name="All">ALL</string>
    <string name="Deals">DEALS</string>
    <string name="YourOrders">YOUR ORDERS</string>
    <string name="Other">OTHER</string>
    <string name="Remove"><u>Remove</u></string>
    <string name="Edit"><u>Edit</u></string>
    <string name="ItemTotal">Item Total</string>
    <string name="EstimatedShipping">Estimated Shipping</string>
    <string name="OrderTotal">Order Total</string>
    <string name="ReturnPolicy">Return Policy</string>
    <string name="ReturnPolicy_u"><u>Return Policy</u></string>
    <string name="Personalize">Personalize</string>
    <string name="Next">Next</string>
    <string name="skip">skip</string>
    <string name="Confirm">Confirm</string>
    <string name="Date">{year}-{month}-{day}</string>
    <string name="CreateYourAccount">Create Your Account</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Email">Email</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Or">OR</string>
    <string name="JoinWithFacebook">Join with Facebook</string>
    <string name="SignIn">Sign In</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="SignInWithFaceBook">Sign In with Facebook</string>
    <string name="Welcome">Welcome</string>
    <string name="WhatDoYouLikeToShopFor">What do you like to shop for?</string>
    <string name="PickAtLeastOneCategory">Pick at least one category</string>
    <string name="ReturnPolicyDetail">We want to be completely satisfied with your purchase on Wish.</string>
    <string name="ProductNameSample">Hots Fashion Triple USB Port Wall Home Travel AC Power Charger Adapter Sale</string>
    <string name="ColorIs">Color: </string>
    <string name="Blue">Blue</string>
    <string name="QuantityIs">Quantity:</string>
    <string name="_1">1</string>
    <string name="ShippingIs">Shipping:</string>
    <string name="ShippingDetail">US$2.04\nSep 19 - Sep 22</string>
    <string name="money">US$3.04</string>
    <string name="moneyDetail">US$30.04</string>
    <string name="OrderConfirmed">Order Confirmed</string>
    <string name="PowerByIs">Power by :</string>
    <string name="Summary">Summary</string>
    <string name="Shipping">Shipping</string>
    <string name="ViewOrders">View Orders</string>
    <string name="ContinueShopping">Continue Shopping</string>
    <string name="RELATED">RELATED</string>
    <string name="password">password</string>
    <string name="Shipping_underLine" ><u>Shipping</u></string>
    <string name="OrderPlacedIs">Order Placed:</string>
    <string name="OrderDate">Sep 5,2016</string>
    <string name="Gray">Gray</string>
    <string name="SizeIs">Size: </string>
    <string name="SizeDetail">Women US5/UK3.5/EUR37</string>
    <string name="priceDetail">$ 1509.00</string>
    <string name="detail">detail</string>
    <string name="empty">empty</string>
    <string name="nulll">null</string>
    <string name="LikeFormat">Like({LikeCount})</string>
    <string name="ShareFormat">Share({ShareCount})</string>
    <string name="priceFormat">$ {price}</string>
    <string name="BracketsFormat">({content})</string>
    <string name="Reviews">Reviews</string>
    <string name="ApplicationCrash">Application crashed and will exit at once.</string>
    <string name="Language">Language</string>
    <string name="PleaseSetYourDesiredLanguage">Please set your desired language:</string>
    <string name="LanguageSetting">Language Setting</string>
    <string name="ChangeCurrency">Change Currency</string>
    <string name="sendSuggest">You are welcome to contact us by this email address for any help.</string>
    <string name="serviceEmail"><u>service@fangzhich.com</u></string>
    <string name="Cerf">Cerf</string>
    <string name="versionCode">V 1.0</string>
    <string name="CheckOut">Checkout</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="InputIndicate">* Indicates a field is required</string>
    <string name="Bay">Bay</string>
    <string name="StreetAddress">Street Address*</string>
    <string name="Unit">Apt/Suite/Unit(Optional)</string>
    <string name="City">City*</string>
    <string name="ZipPostalCodeIndicate">Zip/Postal Code*</string>
    <string name="PhoneIndicate">Phone*</string>
    <string name="SellNumberFormat">Bought by: {number} people</string>
    <string name="SaveNumberFormat">Save by: {number} people</string>
    <string name="RatingNumberFormat">({number} ratings)</string>
    <string name="Availability">Availability</string>
    <string name="EstimatedArrival">Estimated Arrival</string>
    <string name="ShipsFrom">Ships From</string>
    <string name="ProductPriceFormat">$ {number}</string>
    <string name="ProductInventoryFormat">Inventory: {number}</string>
    <string name="ProductOptionFormat">Chose: {content}</string>
    <string name="ShipTo">Ship To:</string>
    <string name="State">State(Optional)</string>
    <string name="OrderDetail">Order Details</string>
    <string name="OrderId">Order #:{content}</string>
    <string name="ShippingAddress">Shipping Address</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="OrderPlaced">Order Placed: {content}</string>
    <string name="Items">Items</string>
    <string name="Tax">Tax</string>
    <string name="ConfirmReceipt">Confirm receipt</string>
    <string name="Review">Review</string>
    <string name="plusOne">+1</string>
    <string name="ShareTo">Share to…</string>
    <string name="Logout">Logout</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="EnterYourEmailAddress">Enter your email address</string>
    <string name="StarRate">Star Rate</string>
    <string name="PleaseEnterYourEvaluation">Please enter your evaluation</string>
    <string name="Submit">Submit</string>
    <string name="LetsSignYourIn">Let\'s sign you in</string>
    <string name="LetsCreateYourAccount">Let\'s create your account</string>
    <string name="title">title</string>
    <string name="SaveShippingInfo">Save shipping Info</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="AboutUsDetail">SneakerLab is where you can make your perfect sneaker purchase at.SneakerLab offers you not only the hottest sneakers but also the exclusive ones.Heads up real Sneakerheads,wherever you go and whenever you want seize an outrageously cool sneaker,in your mobile phone there always waits SneakerLab.Enjoy yourself at SneakerLab!\n\nYour SneakerLab Your SuperShop.</string>
    <string name="Collection">Collection</string>
    <string name="BUY">BUY</string>
    <string name="numberFormat">Number :{number}</string>
    <string name="codeFormat">Zip/Postal Code :{code}</string>
    <string name="RequestRefund">Request Refund</string>
    <string name="CancelUnderLine"><u>Cancel</u></string>
    <string name="RequestRefundUnderLine"><u>Request Refund</u></string>
    <string name="ReceiveYourGoods">Received your goods?</string>
    <string name="AreYouSure">Are you sure?\nIf you cancel this order then you can not get your goods</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="RequestRefundText">We sincerely apologize for your unsatisfication! If you want to apply for refund, please send your refund application to our customer service email account. We shall reply you and handle your application ASAP.</string>
    <string name="customerEmail">customer@fangzhich.com</string>
    <string name="Reviewed">Reviewed!</string>
    <string name="Detail">Detail</string>
    <string name="CustomerSupportDetail">Dear customer,SneakerLab look forward to get in touch with you, You are welcome to contact us for any assistance, our excellent service team will reply and offer you the best solution ASAP.Thank you!</string>
    <string name="send">Send</string>
    <string name="share">share</string>
    <string name="not_sure">not sure</string>
    <string name="NoMoreReviews">No more reviews.</string>
    <string name="Oops">Oops!</string>
    <string name="checkout_fail_notice">Something went wrong with your payment. Recheck and try it again pls.</string>
    <string name="CollectionStillEmpty">Collection still empty</string>
    <string name="ContinueShoppingUnderLine">Continue Shopping</string>
    <string name="FullName">Full name*</string>
    <string name="EditShippingInfo">Edit Shipping Info</string>
    <string name="EditShippingInfoIntro">Please input your address accurately and we will deliver your purchase quickly. The safety of your information is guaranteed.</string>
    <string name="SaveAndNext">Save and next</string>
</resources>