<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/homepage"
            android:icon="@mipmap/browse"
            android:title="@string/Browse"/>
        <item
            android:id="@+id/notify"
            android:icon="@mipmap/notification"
            android:title="@string/Notify"/>
        <item
            android:id="@+id/shoppingCart"
            android:icon="@mipmap/shopping_cart"
            android:title="@string/ShoppingCart"/>
        <item
            android:id="@+id/history"
            android:icon="@mipmap/order"
            android:title="@string/OrderHistory"/>
        <item
            android:id="@+id/currency"
            android:icon="@mipmap/currency"
            android:title="@string/Currency"/>
        <item
            android:id="@+id/contact"
            android:icon="@mipmap/contact_us"
            android:title="@string/ContactUs"/>
        <item
            android:id="@+id/support"
            android:icon="@mipmap/support"
            android:title="@string/CustomerSupport"/>
        <item
            android:id="@+id/language"
            android:icon="@mipmap/language"
            android:title="@string/Language"/>
        <item
            android:id="@+id/about"
            android:icon="@mipmap/about_us"
            android:title="@string/AboutUs"/>
        <item
            android:id="@+id/return_policy"
            android:icon="@mipmap/return_policy"
            android:title="@string/ReturnPolicy"/>
        <item
            android:id="@+id/signout"
            android:title="@string/Signout"/>
    </group>

    <!--<item android:title="SubItems">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:product_id="@+product_id/SubItem1"-->
                <!--android:icon="@mipmap/ic_launcher"-->
                <!--android:title="SubItem1"/>-->
            <!--<item-->
                <!--android:product_id="@+product_id/SubItem2"-->
                <!--android:icon="@mipmap/ic_launcher"-->
                <!--android:title="SubItem2"/>-->
            <!--<item-->
                <!--android:product_id="@+product_id/SubItem3"-->
                <!--android:icon="@mipmap/ic_launcher"-->
                <!--android:title="SubItem3"/>-->
        <!--</menu>-->
    <!--</item>-->
</menu>