<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_productImage"
        android:src="@mipmap/product_image_placeholder"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_width="92dp"
        android:layout_height="92dp" />
    <TextView
        android:id="@+id/productName"
        android:text="@string/ProductName"
        android:textColor="@color/text_color_gray"
        android:textSize="13sp"
        android:textStyle="bold"
        android:lines="1"
        android:ellipsize="end"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@+id/iv_productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/quantityIs"
        android:text="@string/QuantityIs"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/productName"
        android:layout_toRightOf="@+id/iv_productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/quantity"
        android:text="@string/_1"
        android:textColor="@color/tab_layout_select_color"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/productName"
        android:layout_toRightOf="@+id/quantityIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/colorIs"
        android:text="@string/ColorIs"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/quantityIs"
        android:layout_toRightOf="@+id/iv_productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/color"
        android:text="@string/Gray"
        android:textColor="@color/tab_layout_select_color"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/quantityIs"
        android:layout_toRightOf="@+id/colorIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/sizeIs"
        android:text="@string/SizeIs"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/colorIs"
        android:layout_toRightOf="@+id/iv_productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/size"
        android:text="@string/SizeDetail"
        android:textColor="@color/tab_layout_select_color"
        android:textSize="12sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/colorIs"
        android:layout_toRightOf="@+id/colorIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/price"
        android:text="@string/priceDetail"
        android:textColor="@color/tab_layout_select_color"
        android:textSize="13sp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size"
        android:layout_alignRight="@+id/color"
        android:layout_alignEnd="@+id/color" />
</RelativeLayout>