<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/popup_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_above="@+id/dialog_content"
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="5dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/close_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ContinueShopping"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/dialog_content_title"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textSize="16sp"
            android:text="@string/BillTo"
            android:textColor="@color/tab_layout_select_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/bt_back"
            android:textSize="15sp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textColor="@color/dialog_button_cancel"
            android:text="@string/Cancel"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/aboveLine"
            android:layout_below="@+id/dialog_content_title"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cut_line_color"/>
        <TextView
            android:layout_below="@+id/aboveLine"
            android:id="@+id/inputIndicate"
            android:textColor="@color/tab_layout_select_color"
            android:textSize="13sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="5dp"
            android:text="@string/InputIndicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            style="@style/EditText"
            android:id="@+id/et_address_bay"
            android:paddingRight="9dp"
            android:paddingLeft="9dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textSize="14sp"
            android:layout_below="@+id/inputIndicate"
            android:layout_marginTop="5dp"
            android:hint="@string/Bay"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <EditText
            style="@style/EditText"
            android:id="@+id/et_address_street"
            android:paddingRight="9dp"
            android:paddingLeft="9dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textSize="14sp"
            android:layout_below="@+id/et_address_bay"
            android:layout_marginTop="5dp"
            android:hint="@string/StreetAddress"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <EditText
            style="@style/EditText"
            android:id="@+id/et_address_unit"
            android:paddingRight="9dp"
            android:paddingLeft="9dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textSize="14sp"
            android:layout_below="@+id/et_address_street"
            android:layout_marginTop="5dp"
            android:hint="@string/Unit"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <LinearLayout
            android:id="@+id/country_layout"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:layout_below="@+id/et_address_unit"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.fangzhich.sneakerlab.base.widget.spinner.NiceSpinner
                android:id="@+id/spinner_country"
                app:textTint="@color/tab_layout_select_color"
                android:layout_marginRight="2dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"/>
            <EditText
                style="@style/EditText"
                android:id="@+id/et_address_state"
                android:paddingRight="9dp"
                android:paddingLeft="9dp"
                android:textSize="14sp"
                android:layout_marginLeft="2dp"
                android:hint="@string/State"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp" />
        </LinearLayout>
        <EditText
            style="@style/EditText"
            android:id="@+id/et_address_city"
            android:paddingRight="9dp"
            android:paddingLeft="9dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textSize="14sp"
            android:layout_below="@+id/country_layout"
            android:layout_marginTop="5dp"
            android:hint="@string/City"
            android:layout_width="match_parent"
            android:layout_height="35dp" />
        <LinearLayout
            android:id="@+id/contact_layout"
            android:layout_below="@+id/et_address_city"
            android:orientation="horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="35dp">
            <EditText
                style="@style/EditText"
                android:id="@+id/et_address_code"
                android:paddingRight="9dp"
                android:paddingLeft="9dp"
                android:layout_marginRight="2dp"
                android:textSize="14sp"
                android:hint="@string/ZipPostalCodeIndicate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp" />
            <EditText
                style="@style/EditText"
                android:id="@+id/et_address_phone"
                android:paddingRight="9dp"
                android:textSize="14sp"
                android:paddingLeft="9dp"
                android:layout_marginLeft="2dp"
                android:hint="@string/PhoneIndicate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:inputType="phone" />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:id="@+id/bt_save_info"
            android:layout_below="@+id/contact_layout"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="1dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp" >
            <TextView
                android:textColor="@color/product_list_background_color"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/SavePaymentInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>