<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/main_content"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="0dp">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/colorPrimary">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="72dp">

        <TextView
          android:id="@+id/title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/EditShippingInfo"
          android:textColor="@android:color/white"
          android:textSize="@dimen/action_bar_title_size"
          android:textStyle="bold" />
      </RelativeLayout>
    </android.support.v7.widget.Toolbar>
  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shipping_info_background_color"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/EditShippingInfoIntro"
        android:textColor="@color/text_color_yellowFFA057"
        android:textSize="12sp" />

      <TextView
        android:id="@+id/inputIndicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/InputIndicate"
        android:textColor="@color/tab_layout_select_color"
        android:textSize="12sp" />

      <EditText
        android:id="@+id/et_address_bay"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/inputIndicate"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/FullName"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp" />

      <EditText
        android:id="@+id/et_address_street"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_address_bay"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/StreetAddress"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp" />

      <EditText
        android:id="@+id/et_address_unit"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_address_street"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Unit"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp" />

      <LinearLayout
        android:id="@+id/country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_address_unit"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.fangzhich.sneakerlab.base.widget.spinner.NiceSpinner
          android:id="@+id/spinner_country"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_marginRight="2dp"
          android:layout_weight="1"
          android:textSize="14sp"
          app:paddingEnd="5dp"
          app:paddingStart="5dp"
          app:textTint="@color/tab_layout_select_color" />

        <com.fangzhich.sneakerlab.base.widget.spinner.NiceSpinner
          android:id="@+id/spinner_state"
          android:layout_width="0dp"
          android:layout_height="40dp"
          android:layout_marginLeft="2dp"
          android:layout_weight="1"
          android:textSize="12sp"
          app:paddingEnd="5dp"
          app:paddingStart="5dp"
          app:textTint="@color/tab_layout_select_color" />
      </LinearLayout>

      <EditText
        android:id="@+id/et_address_city"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/country_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/City"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp" />

      <EditText
        android:id="@+id/et_address_code"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_address_city"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ZipPostalCodeIndicate"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp" />

      <EditText
        android:id="@+id/et_address_phone"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_address_code"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/PhoneIndicate"
        android:inputType="phone"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp" />
    </RelativeLayout>
  </android.support.v4.widget.NestedScrollView>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <android.support.v7.widget.CardView
      android:id="@+id/bt_save_info"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:layout_alignParentBottom="true"
      android:foreground="?attr/selectableItemBackgroundBorderless"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="0dp"
      app:cardElevation="0dp">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/SaveAndNext"
        android:textColor="@color/product_list_background_color"
        android:textSize="15sp"
        android:textStyle="bold" />
    </android.support.v7.widget.CardView>
  </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>